<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TermsAndConditions"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/dark_blue">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Term_and_conditions"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/government_id"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/dark_blue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_condition_1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/dark_blue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_condition_2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/dark_blue"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_condion_3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/dark_blue"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_condion_4"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/dark_blue"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/disclaimer_1"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/disclaimer_2"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/disclaimer_3"
        android:layout_marginRight="20dp"
        />




</LinearLayout>