<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Package">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/select_package_text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/dark_blue"
        android:paddingTop="20dp"
        android:text="@string/select_your_package"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_package_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Basic_button"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_basic_button"
            android:text="@string/basic"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Gold_button"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_gold_button"
            android:text="@string/gold"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Premium_button"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_premium_button"
            android:text="@string/premium"
            android:textAllCaps="false" />


    </LinearLayout>


</RelativeLayout>